	OpenSSL is used with builds. Only the latest major versions
	are used, similarly to Travis CI. Net-SSLeay PPM and PPD files
	are made available as artifacts.

	Files t/local/43_misc_functions.t and
	t/local/65_ticket_sharing_2.t were missing from MANIFEST.

	Added README.md with link to master branch build and test
	status. Did minor updates to README and other misc files.

1.85 2018-03-14
	Preparations for transferring maintenace to a new maintainer
	Fixed test failure in t/local/33_x509_create_cert.t for some version of OpenSSL.
	Fixed free() error that causes "Free to wrong pool ..." merssage on Windows.
	Reported and patched by Steffen Ullrich.
	
1.84 2018-01-17
	Fixed an error in t/local/04_basic.t causing a test failure if
	Test::Exception not installed. Reported by Joel Berger.
	
1.83 2018-01-16
	Fixed a problem with exporting OPENSSL_NO_NEXTPROTONEG even though they are not availble on LibreSSL.
	Patch patch-SSLeay_xs-NO_NPN from Alexander Bluhm.
	Patch from Heikki Vatiainen adds support for SSL_set_default_passwd_cb* for 
	OpenSSL 1.1.0f and later. LibreSSL does not support these functions, at 
	least yet.
	Patch from Heikki Vatiainen adds new functions related to SSL_CTX_new.
	Patch from Heikki Vatiainen adds two new functions introduced in OpenSSL 1.1.0, a number 
	of constants and a couple of const qualifiers to SSLeay.xs. Tests and 
	documentation .pod were also updated.
	Patch from Heikki Vatiainen adds one new OpenSSL 1.1.0 function and has a minor fix for 
	LibreSSL version detection:	    
	*   Added support for SSL_use_certificate_chain_file
     	function introduced in OpenSSL 1.1.0.
	*   Fixed LibreSSL version detection to correctly parse
     	LibreSSL minor version.
	Patch from Steffen Ulrich to fix memory leaks in OCSP handling. Thanks.
	Patch from Heikki Vatiainen adds new functions for certificate verification introduced in 
	OpenSSL 1.02, a number of constants, new test data files, new tests and 
	updates to .pod documentation.