@@ -2,6 +2,7 @@ Makefile
 Makefile.old
 MYMETA.json
 MYMETA.yml
+META.yml
 blib/
 pm_to_blib
 *.pdf
@@ -17,6 +18,7 @@ pm_to_blib
 *.ppd
 *.bs
 *~
+*.bak
 *.dll
 *.o
 *.c
